Fix poll compose form being broken on single-column layout

--- a/app/javascript/flavours/glitch/styles/polls.scss
+++ b/app/javascript/flavours/glitch/styles/polls.scss
@@ -170,6 +170,7 @@
 
 .compose-form__poll-wrapper {
   border-top: 1px solid darken($simple-background-color, 8%);
+  overflow-x: hidden;
 
   ul {
     padding: 10px;
